<resources>
    <string name="app_name">Socializer</string>
    <string name="need_a_new_account">Need a new Account?</string>
    <string name="create_account">Create Account</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="logout">Logout</string>
    <string name="login_to_your_account">Login to your Account</string>
    <string name="login">LOGIN</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account_settings">Account Settings</string>
    <string name="total_friends">Total Friends</string>
    <string name="send_friend_request">SEND FRIEND REQUEST</string>
    <string name="unfriend_person">UNFRIEND THIS PERSON</string>
    <string name="LogginUser">Logging User</string>
    <string name="acceptFriendReq">ACCEPT FRIEND REQUEST</string>
    <string name="declineFriendReq">CANCEL FRIEND REQUEST</string>
</resources>
